--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Sixtyfour:BLED,SCAN@0..100,-53..100&display=swap');
 
 :root {
-    --cor-primaria: #607274;
-    --cor_secundaria: #FAEED1;
-    --cor_terciaria: #DED0B6;
-    --cor_texto: #B2A59B;
+    --cor-primaria: #F3EEEA;
+    --cor_secundaria: #EBE3D5;
+    --cor_terciaria: #B0A695;
+    --cor_texto: #776B5D;
 
     --fonte_rubik: "Rubik", sans-serif;
     --fonte_sixtyfour: "Sixtyfour", sans-serif;
@@ -16,97 +16,106 @@
 }
 
 body {
-    box-sizing: border-box;
-    background-image: linear-gradient(to top, var(--cor-primaria), var(--cor_terciaria));
-    color: var(--cor_texto);
+    width: auto;
+    background-color: var(--cor-primaria);
 }
 
 .cabecalho {
-    padding: 2% 5% 0% 2%;
-    display: flex;
+    padding: 2.5rem ;
 }
 
 .cabecalho_titulo {
     font-family: var(--fonte_rubik);
+    font-size: 2.5rem;
     color: var(--cor_texto);
-    font-size: 36px;
-    font-weight: 700;
 }
 
 strong {
-    color: var(--cor_secundaria);
     font-family: var(--fonte_sixtyfour);
-
-}
-
-strong:hover {
     color: var(--cor_terciaria);
 }
 
+strong:hover {
+    color: var(--cor_secundaria);
+}
+
 .interacao {
-    padding: 2% 3%;
     display: flex;
-    align-items: flex-start;
-    gap: 30px;
+    padding-left: 15rem;
+    padding-right: 15rem;
+    padding-top: 2.5rem;
+    gap: 15rem;
 }
 
 .interacao_conteudo_entrada {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 30px;   
+    gap: 15rem;
+}
+
+.interacao_conteudo_entrada_texto {
+    resize: none;
+    border: none;
+    outline: none;
+    background-color: var(--cor-primaria);
+    font-size: 2rem;
+}
+
+.interacao_conteudo_entrada_aviso {
+    display: flex;
+    color: var(--cor_texto);
+    font-size: 0.75rem;
+    flex-direction: row;
+    align-items: stretch;
+    gap: 0.2rem;
+}
+
+.interacao_conteudo_entrada_botoes {
+    padding-top: 1rem;
+    padding-bottom: 4.5rem;
+    display: flex;
+    gap: 1.5rem;
+}
+
+.interacao_conteudo_entrada_botoes_estilo {
+    font-size: 1rem;
+    font-family: var(--fonte_rubik);
+    border-radius: 1.5rem;
+    width: 20.5rem;
+    height: 4.188rem;
+    border-color: var(--cor_terciaria); 
 }
 
 .interacao_conteudo_saida {
-    width: 100%;
+    padding: 3rem;
+    border-radius: 2rem;
+    background-color: var(--cor_secundaria);
+    width: 30rem;
+    height: 44.688rem;
+    box-shadow: 5px 10px 18px var(--cor_texto);
     display: flex;
     flex-direction: column;
-    gap: 30px;
 }
 
-.textarea {
-    font-family: var(--fonte_rubik);
-    color: var(--cor_texto);
-    font-size: 24px;
-    font-weight: 400;
-    resize: none;   
-    border: 8px inset var(--cor_secundaria);
-    border-radius: 16px;
-    padding: 20px 20px;
+.interacao_conteudo_saida_imagem {
+    padding-left: 6.25rem;
+    padding-right: 6.25rem;; 
 }
 
-.botoes {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
-.botoes_botao {
-    background-color: var(--cor_terciaria);
-    color: var(--cor-primaria);
-    font-family: var(--fonte_rubik);
-    font-size: 24px;
-    border: 2px solid var(--cor_secundaria);
-    width: 150px;
-    height: 70px;
-    border-radius: 16px;
-}
-
-.botoes_botao:hover {
-    font-size: 28px;
-    border-radius: 8px;
+.interacao_conteudo_saida_texto {
+    resize: none;
+    border: none;
+    outline: none;
     background-color: var(--cor_secundaria);
+    font-size: 2rem;
 }
 
-
-
-.rodape {
-    padding: 24px;
-    background-color: var(--cor_terciaria);
-    color: var(--cor-primaria);
-    text-align: center;
+.interacao_conteudo_saida_botao {
+    font-size: 1rem;
     font-family: var(--fonte_rubik);
-    font-size: 24px;
-    font-weight: 400;
-
+    border-radius: 1rem;
+    width: 20.5rem;
+    height: 4.188rem;
+    border-color: var(--cor_terciaria);  
 }
+
