--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@
 }
 
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body {
-    width: auto;
+    width: 100%;
     background-color: var(--cor-primaria);
 }
 
@@ -28,6 +29,7 @@ body {
     font-family: var(--fonte_rubik);
     font-size: 2.5rem;
     color: var(--cor_texto);
+    width: auto;
 }
 
 strong {
@@ -44,6 +46,7 @@ strong:hover {
     padding-left: 15rem;
     padding-right: 15rem;
     padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
     gap: 15rem;
 }
 
@@ -51,6 +54,8 @@ strong:hover {
     display: flex;
     flex-direction: column;
     gap: 15rem;
+    width: 50%;
+    float: left;
 }
 
 .interacao_conteudo_entrada_texto {
@@ -86,21 +91,24 @@ strong:hover {
     border-color: var(--cor_terciaria); 
 }
 
+.interacao_conteudo_entrada_botoes_estilo:hover {
+    color: var(--cor-primaria);
+    font-size: 1.1rem;
+    background-color: var(--cor_terciaria);
+}
+
 .interacao_conteudo_saida {
     padding: 3rem;
     border-radius: 2rem;
-    background-color: var(--cor_secundaria);
-    width: 30rem;
-    height: 44.688rem;
+    background-color: var(--cor_secundaria); 
     box-shadow: 5px 10px 18px var(--cor_texto);
     display: flex;
     flex-direction: column;
+    width: 50%;
+    height: 50%;
+    float: left;
 }
 
-.interacao_conteudo_saida_imagem {
-    padding-left: 6.25rem;
-    padding-right: 6.25rem;; 
-}
 
 .interacao_conteudo_saida_texto {
     resize: none;
@@ -108,14 +116,40 @@ strong:hover {
     outline: none;
     background-color: var(--cor_secundaria);
     font-size: 2rem;
+    width: 100%;
 }
 
 .interacao_conteudo_saida_botao {
     font-size: 1rem;
     font-family: var(--fonte_rubik);
-    border-radius: 1rem;
+    border-radius: 1.5rem;
     width: 20.5rem;
     height: 4.188rem;
-    border-color: var(--cor_terciaria);  
+    border-color: var(--cor_terciaria);   
+    
 }
 
+.interacao_conteudo_saida_botao:hover {
+    color: var(--cor-primaria);
+    font-size: 1.1rem;
+    background-color: var(--cor_terciaria);  
+}
+
+footer {
+    width: 100%;
+    font-size: 1.5rem;
+    font-family: var(--fonte_rubik);
+    text-align: center;
+    background-image: linear-gradient(var(--cor_texto), var(--cor_terciaria));
+    margin-top: 2.5rem;
+}
+
+@media (max-width: 1400px) {
+    .interacao {
+        flex-direction: column;
+        padding-left: 5rem;
+        padding-right: 5rem;
+       
+    }
+    
+}
